<?xml version="1.0" encoding="utf-8"?>
<ScrollView  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:id="@+id/ScrollView01"  
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content"  
    android:scrollbars="vertical"> 
    <LinearLayout  
        android:layout_width="fill_parent"  
        android:orientation="vertical"  
        android:layout_height="fill_parent"> 
		<EditText android:id="@+id/title" 
		  android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:hint="@string/title"/>
		<LinearLayout  
	        android:layout_width="fill_parent"  
	        android:orientation="horizontal"  
	        android:layout_height="wrap_content">
	    <TextView android:id="@+id/dateDisplayLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Date: "/>
		<TextView android:id="@+id/dateDisplay"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text=""/>
		</LinearLayout>
		<EditText android:id="@+id/body"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:hint="@string/body"
			android:inputType="textMultiLine"  
	    	android:lines="5"  
			android:scrollbars="vertical" />
		
		<Button android:id="@+id/confirm" 
		  android:text="@string/confirm"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

	</LinearLayout>
</ScrollView>